# aoc_2022

./: .clang-format  CMakeLists.txt  new_day.cmake
src/: CMakeLists.txt  day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  jc.hpp  jc_check.hpp  jc_file.hpp  jc_string.hpp
